# Rust-Offset-Finder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: config.rs  lib.rs  main.rs
src/analysis/: block.rs  cfg.rs  class_analysis.rs  control_flow.rs  cross_reference.rs  data_flow.rs  dataflow.rs  disasm.rs  disassembler.rs  function.rs  heuristics.rs  instruction.rs  mod.rs  pattern.rs  pattern_analysis.rs  reference.rs  signature.rs  string.rs  string_analysis.rs  types.rs  validation.rs  vtable_analysis.rs
src/diff/: analyzer.rs  binary.rs  mod.rs  offset.rs  report.rs  version.rs
src/engine/: core.rs  mod.rs  pipeline.rs  result.rs  runner.rs  scheduler.rs  stage.rs  task.rs  worker.rs
src/finders/: base.rs  error.rs  mod.rs  result.rs  strategy.rs
src/luau/: api.rs  bytecode.rs  compiler.rs  debug.rs  decompiler.rs  gc.rs  mod.rs  opcode.rs  state.rs  types.rs  upvalue.rs  vm.rs
src/memory/: access.rs  address.rs  allocator.rs  binary.rs  cache.rs  error.rs  mapping.rs  mmap.rs  mod.rs  process.rs  protection.rs  range.rs  region.rs  scanner.rs  segment.rs  traits.rs
src/orchestration/: aggregator.rs  collector.rs  coordinator.rs  discovery.rs  finalizer.rs  mod.rs  scheduler.rs
src/orchestrator/: aggregator.rs  collector.rs  coordinator.rs  discovery.rs  finalizer.rs  mod.rs  scheduler.rs
src/output/: diff.rs  exporter.rs  formatter.rs  json.rs  manager.rs  mod.rs  report.rs  stats.rs  template.rs
src/pattern/: arm64.rs  (+17 more)
(+206 files in other folders)
