[package]
name = "roblox-offset-generator"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "roblox-offset-generator"
path = "src/main.rs"

[lib]
name = "roblox_offset_generator"
path = "src/lib.rs"

[dependencies]
goblin = "0.8"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
memmap2 = "0.9"
libc = "0.2"
once_cell = "1.20"
itertools = "0.13"
bytes = "1.6"
indexmap = "2.2"
ahash = "0.8"
parking_lot = "0.12"
num_cpus = "1.0"
terminal_size = "0.3"
bitflags = "2.4"
